2010-08-23  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el: Accept UNIX domain sockets as bus address.
	(top): Don't initialize `dbus-registered-objects-table' anymore,
	this is done in dbusbind,c.
	(dbus-check-event): Adapt test for bus.
	(dbus-return-values-table, dbus-unregister-service)
	(dbus-event-bus-name, dbus-introspect, dbus-register-property):
	Adapt doc string.

2010-08-23  Juanma Barranquero  <lekktu@gmail.com>

	* ido.el (ido-use-virtual-buffers): Fix typo in docstring.

2010-08-22  Juri Linkov  <juri@jurta.org>

	* simple.el (read-extended-command): New function with the logic
	for `completing-read' moved to Elisp from `execute-extended-command'.
	Use `function-called-at-point' in `minibuffer-default-add-function'
	to get a command name for M-n (bug#5364, bug#5214).

2010-08-22  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line-1): Issue warning for ignored arguments
	--unibyte, etc (Bug#6886).

2010-08-22  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/easy-mmode.el (define-minor-mode): Doc fix (Bug#6880).

2010-08-22  Leo  <sdl.web@gmail.com>

	Fix buffer-list rename&refresh after after killing a buffer in ido.
	* lisp/ido.el: Revert Óscar's.
	(ido-kill-buffer-at-head): Exit the minibuffer with ido-exit=refresh.
	Remember the buffers at head, rather than their name.
	* lisp/iswitchb.el (iswitchb-kill-buffer): Re-make the list.

2010-08-22  Kirk Kelsey  <kirk.kelsey@0x4b.net>  (tiny change)
            Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/make-mode.el (makefile-fill-paragraph): Account for the
	extra backslash added to each line (bug#6890).

2010-08-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (read-key): Don't echo keystrokes (bug#6883).

2010-08-22  Glenn Morris  <rgm@gnu.org>

	* menu-bar.el (menu-bar-games-menu): Add landmark.

2010-08-22  Glenn Morris  <rgm@gnu.org>

	* align.el (align-regexp): Make group and spacing arguments