@@ -1,3 +1,8 @@
+2010-08-24  Chong Yidong  <cyd@stupidchicken.com>
+
+	* mouse.el (mouse-yank-primary): Avoid setting primary when
+	deactivating the mark (Bug#6872).
+
 2010-08-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/dbus.el: Accept UNIX domain sockets as bus address.
